test/good/function_declarations.mpp
fun max (n:int, m:int):int { var ans:int; return 0; };
fun merge (x[]:int, y[]:bool, r[]:int):bool { return true; };
