test/bad/double_declaration_05.mpp
fun foo():bool { return true; };
data foo = #FOO;
